--- a/P2_Examen1_NombreApellido/nbproject/project.properties
+++ b/P2_Examen1_NombreApellido/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/P2_Examen1_NombreApellido.jar
+dist.jar=${dist.dir}/P2_Examen1_JafetHou.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/P2_Examen1_NombreApellido
+dist.jlink.output=${dist.jlink.dir}/P2_Examen1_JafetHou
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=P2_Examen1_NombreApellido
-main.class=p2_examen1_nombreapellido.P2_Examen1_NombreApellido
+jlink.launcher.name=P2_Examen1_JafetHou
+main.class=p2_examen1_JafetHou.P2_Examen1_JafetHou
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
