--- a/P2_Examen1_NombreApellido/nbproject/private/private.properties
+++ b/P2_Examen1_NombreApellido/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/claudiacortes/Library/Application Support/NetBeans/21/build.properties
+user.properties.file=C:\\Users\\zenot\\AppData\\Roaming\\NetBeans\\19\\build.properties
